--- a/LoveDeathRobots/LoveDeathRobots.html
+++ b/LoveDeathRobots/LoveDeathRobots.html
@@ -37,7 +37,7 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Love, Death & Robots is an American adult animated science fiction anthology web television series on Netflix. The 18-episode first season was released on March 15, 2019. The series is produced by Joshua Donen, David Fincher, Jennifer Miller, and Tim Miller. Each episode was animated by different crews from a range of countries. The series is a re-imagining of Fincher and Miller's long in-development reboot of the 1981 animated science fiction film Heavy Metal.
+Love, Death & Robots is an American adult animated science fiction anthology web television series on <a href="../Netflix/Netflix.html">Netflix</a>. The 18-episode first season was released on March 15, 2019. The series is produced by Joshua Donen, David Fincher, Jennifer Miller, and Tim Miller. Each episode was animated by different crews from a range of countries. The series is a re-imagining of Fincher and Miller's long in-development reboot of the 1981 animated science fiction film Heavy Metal.
 </p><p>
 The cast includes Mary Elizabeth Winstead, Gary Cole, Chris Parnell, Omid Abtahi, John DiMaggio, Christine Adams, Josh Brener, Jill Talley, Hakeem Kae-Kazim, Nolan North, Elaine Tan, Aaron Himelstein, Samira Wiley, Stefan Kapičić, and Topher Grace, with Grace and Winstead appearing in live-action roles, rather than animated.
 </p><p>
