--- a/Netflix/Netflix.html
+++ b/Netflix/Netflix.html
@@ -19,6 +19,10 @@
 <div class="modal-content">
 
 <div class="mySlides" style="text-align: center;"><img src="Netflix1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Netflix2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Netflix3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Netflix4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Netflix5.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -32,10 +36,10 @@ Since 2012, Netflix has taken more of an active role as producer and distributor
 </p><p>
 Netflix Movies
 </p><p>
-<li>#REALITYHIGH    September 8, 2017 
-<li>13th    October 7, 2016 
-<li>13th: A Conversation with Oprah Winfrey &amp; Ava DuVernay  January 26, 2017 
-<li>15 August   March 29, 2019 
+<li><a href="Netflix2.jpg">#REALITYHIGH</a> (2017) 
+<li><a href="Netflix3.jpg">13th</a> (2016) 
+<li><a href="Netflix4.jpg">13th: A Conversation with Oprah Winfrey &amp; Ava DuVernay</a> (2017) 
+<li><a href="Netflix5.jpg">15 August</a> (2019) 
 <li>1922    October 20, 2017 
 <li>22 July     October 10, 2018 
 <li>5 Star Christmas    December 7, 2018 
