--- a/index.html
+++ b/index.html
@@ -3339,6 +3339,13 @@
 </tr>
 
 <tr>
+<td>Capital Comics</td>
+<td>1983</td>
+<td>Publisher</td>
+<td><a href="CapitalComics/CapitalComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Captain Aero</td>
 <td>1941</td>
 <td>Temerson</td>
@@ -5664,6 +5671,13 @@
 </tr>
 
 <tr>
+<td>Eclipse Comics</td>
+<td>1977</td>
+<td>Publisher</td>
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Ectokid</td>
 <td>1993</td>
 <td>Marvel</td>
@@ -6377,6 +6391,13 @@
 <td>1986</td>
 <td>Marvel</td>
 <td><a href="Firestar/Firestar.html">Details</a></td>
+</tr>
+
+<tr>
+<td>First Comics</td>
+<td>1983</td>
+<td>Publisher</td>
+<td><a href="FirstComics/FirstComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9075,6 +9096,13 @@
 <td>1951</td>
 <td>Marvel</td>
 <td><a href="KentBlake/KentBlake.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Key Publications</td>
+<td>1951</td>
+<td>Publisher</td>
+<td><a href="StanleyMorse/StanleyMorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14493,6 +14521,13 @@
 </tr>
 
 <tr>
+<td>Stanley Morse</td>
+<td>1951</td>
+<td>Publisher</td>
+<td><a href="StanleyMorse/StanleyMorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Star Control</td>
 <td>1990</td>
 <td>Accolade</td>
@@ -16451,6 +16486,13 @@
 <td>1950</td>
 <td>Marvel</td>
 <td><a href="Gunhawk/Gunhawk.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Whisper</td>
+<td>1983</td>
+<td>Capital</td>
+<td><a href="Whisper/Whisper.html">Details</a></td>
 </tr>
 
 <tr>
