--- a/index.html
+++ b/index.html
@@ -450,6 +450,13 @@
 </tr>
 
 <tr>
+<td>AC Comics</td>
+<td>1969</td>
+<td>Publisher</td>
+<td><a href="ACComics/ACComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Accident Man</td>
 <td>1993</td>
 <td>Dark Horse</td>
