--- a/1001ArabianNights/1001ArabianNights.html
+++ b/1001ArabianNights/1001ArabianNights.html
@@ -9,7 +9,7 @@
 
 <body>
 <img src="1001ArabianNights1.jpg"> <br>
-Translated from Arabic into French in 1704 by Antoine Galland<br>
+Stories from the Islamic Golden Age (800-1300)
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
