--- a/FuJitsu/FuJitsu.html
+++ b/FuJitsu/FuJitsu.html
@@ -9,7 +9,7 @@
 
 <body>
 <img src="FuJitsu1.jpg"> <br>
-5 issues from 2017 - 2018 by AfterShock
+5 issues from 2017 - 2018 by <a href="../AftershockComics/AftershockComics.html">Aftershock</a>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -37,5 +37,6 @@ Robert Wadlow, the world’s tallest man and wielder of the Atomic Katana, has a
 </p><p>
 Travel back in time sixty years to 1959 where Johnny Unitas and Fu Jitsu fought crime as The Golden Arm and Shaolin Lad!  Then travel sixty centuries into the future where Robert Wadlow tries to escape the infernal prison at the end of time! Then travel back to now and see this story is just getting started! Kung-fu-time-travel-football goodness, brought to you by AfterShock Comics!
 </p>
+
 </body>
 </html>
