--- a/RickAndMorty/RickAndMorty.html
+++ b/RickAndMorty/RickAndMorty.html
@@ -9,14 +9,8 @@
 
 <body>
 <img src="RickAndMorty1.jpg" title="title"> <br>
-Series: 31 TV Episodes 2013 - 2018<br>
-Created by Justin Roiland, Dan Harmon<br>
-Producer: Adult Swim, Warner Bros <br>
+31 episodes 2013 - 2019, created by Justin Roiland and Dan Harmon, on Adult Swim (Cartoon Network)
 <p>
-Rick and Morty is an American adult animated science fiction adventure comedy series created by Justin Roiland and Dan Harmon for Cartoon Network's late-night programming block Adult Swim. The series follows the misadventures of cynical mad scientist Rick Sanchez and his good-hearted but fretful grandson Morty Smith, who split their time between domestic life and interdimensional adventures. The series premiered on December 2, 2013, and the third season concluded on October 1, 2017. In May 2018, the series was picked up for an additional 70 episodes over an unspecified number of seasons.
-</p><p>
-Roiland voices the eponymous characters, with Chris Parnell, Spencer Grammer and Sarah Chalke voicing the rest of the family. The series originated from an animated short parody film of Back to the Future, The Real Animated Adventures of Doc and Mharti, created by Roiland for Channel 101, a short film festival co-founded by Harmon. When Adult Swim approached Harmon for television show ideas, he and Roiland decided to develop a program based on the short. The series has received universal acclaim for its originality, creativity and humor.
-</p><p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
 </div> </div>
@@ -35,7 +29,13 @@ Roiland voices the eponymous characters, with Chris Parnell, Spencer Grammer and
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
-
+</p><p>
+Rick and Morty is an American adult animated science fiction adventure comedy series created by Justin Roiland and Dan Harmon for Cartoon Network's late-night programming block Adult Swim. 
+</p><p>
+The series follows the misadventures of cynical mad scientist Rick Sanchez and his good-hearted but fretful grandson Morty Smith, who split their time between domestic life and interdimensional adventures. The series premiered on December 2, 2013, and the third season concluded on October 1, 2017. In May 2018, the series was picked up for an additional 70 episodes over an unspecified number of seasons.
+</p><p>
+Roiland voices the eponymous characters, with Chris Parnell, Spencer Grammer and Sarah Chalke voicing the rest of the family. The series originated from an animated short parody film of Back to the Future, The Real Animated Adventures of Doc and Mharti, created by Roiland for Channel 101, a short film festival co-founded by Harmon. When Adult Swim approached Harmon for television show ideas, he and Roiland decided to develop a program based on the short. The series has received universal acclaim for its originality, creativity and humor.
 </p>
+
 </body>
 </html>
