--- a/StarControl/StarControl.html
+++ b/StarControl/StarControl.html
@@ -9,8 +9,7 @@
 
 <body>
 <img src="StarControl.jpg" title="Boris Vallejo"> <br>
-Created by: Fred Ford, Paul Reiche III<br>
-Publisher: Accolade 1990
+Created by Fred Ford and Paul Reiche III with <a href="../Accolade/Accolade.html">Accolade</a> (1990)
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
