--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
 
 <tr>
 <td>1001 (Arabian) Nights</td>
-<td>1704</td>
-<td>Antoine Galland</td>
+<td>800</td>
+<td>Antiquity</td>
 <td><a href="1001ArabianNights/1001ArabianNights.html">Details</a></td>
 </tr>
 
@@ -415,6 +415,13 @@
 </tr>
 
 <tr>
+<td>Abrams Books</td>
+<td>1949</td>
+<td>Publisher</td>
+<td><a href="AbramsBooks/AbramsBooks.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Absolute Vertigo</td>
 <td>1995</td>
 <td>Vertigo</td>
@@ -464,10 +471,24 @@
 </tr>
 
 <tr>
+<td>Accolade</td>
+<td>1984</td>
+<td>Publisher</td>
+<td><a href="Accolade/Accolade.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Ace Comics</a>
 <td>1937</td>
 <td>David McKay</td>
 <td><a href="Ace/Ace.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ace Magazines</a>
+<td>1929</td>
+<td>Publisher</td>
+<td><a href="AceMagazines/AceMagazines.html">Details</a></td>
 </tr>
 
 <tr>
@@ -510,6 +531,13 @@
 <td>1987</td>
 <td>Marvel</td>
 <td><a href="ActionForce/actionforce.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Activision</td>
+<td>1979</td>
+<td>Publisher</td>
+<td><a href="Activision/Activision.html">Details</a></td>
 </tr>
 
 <tr>
@@ -559,6 +587,13 @@
 <td>2015</td>
 <td>Dark Horse</td>
 <td><a href="Adam3/adam3.html">Details</a></td>
+</tr>
+
+<tr>
+<td>AdHouse Books</td>
+<td>2002</td>
+<td>Publisher</td>
+<td><a href="AdHouse/AdHouse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -740,6 +775,13 @@
 <td>1991</td>
 <td>MTV</td>
 <td><a href="AeonFlux/aeonflux.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aftershock Comics</td>
+<td>2015</td>
+<td>Publisher</td>
+<td><a href="AftershockComics/AftershockComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -2453,7 +2495,7 @@
 <tr>
 <td>Beowulf</td>
 <td>975</td>
-<td>England</td>
+<td>Antiquity</td>
 <td><a href="Beowulf/Beowulf.html">Details</a></td>
 </tr>
 
@@ -2550,7 +2592,7 @@
 <tr>
 <td>Bible</td>
 <td>-600</td>
-<td>GOD</td>
+<td>Antiquity</td>
 <td><a href="Bible/Bible.html">Details</a></td>
 </tr>
 
@@ -3306,7 +3348,7 @@
 <tr>
 <td>Call of Duty</td>
 <td>2003</td>
-<td>Activision Blizzard</td>
+<td>Activision</td>
 <td><a href="CallOfDuty/CallOfDuty.html">Details</a></td>
 </tr>
 
@@ -5701,7 +5743,7 @@
 <tr>
 <td>Eddas</td>
 <td>1220</td>
-<td>Snorri Sturluson</td>
+<td>Antiquity</td>
 <td><a href="Eddas/Eddas.html">Details</a></td>
 </tr>
 
@@ -5785,7 +5827,7 @@
 <tr>
 <td>Egyptian Book of the Dead</td>
 <td>-1500</td>
-<td>Egyptian Collection</td>
+<td>Antiquity</td>
 <td><a href="EgyptianBookOfTheDead/EgyptianBookOfTheDead.html">Details</a></td>
 </tr>
 
@@ -5939,7 +5981,7 @@
 <tr>
 <td>Epic of Gilgamesh</td>
 <td>-2100</td>
-<td>Akkadian Clay Tablet</td>
+<td>Antiquity</td>
 <td><a href="EpicOfGilgamesh/EpicOfGilgamesh.html">Details</a><td>
 </tr>
 
@@ -8197,7 +8239,7 @@
 <tr>
 <td>Iliad and Odyssey</td>
 <td>-800</td>
-<td>Homer</td>
+<td>Antiquity</td>
 <td><a href="Iliad/Iliad.html">Details</a></td>
 </tr>
 
@@ -13053,7 +13095,7 @@
 <tr>
 <td>Rick and Morty</td>
 <td>2013</td>
-<td>Adult Swim</td>
+<td>Cartoon Network</td>
 <td><a href="RickAndMorty/RickAndMorty.html">Details</a></td>
 </tr>
 
