--- a/AdHouse/AdHouse.html
+++ b/AdHouse/AdHouse.html
@@ -32,6 +32,7 @@ AdHouse's first publication, Pulpatoon Pilgrimage, won the 2002 Small Press Expo
 </p><p>
 Titles
 </p><p>
+<li><a href="../DuncanTheWonderDog/DuncanTheWonderDog.html">Duncan the Wonder Dog</a> (2010)
 <li>Project: Romantic (2006)
 <li>Bumperboy and the Loud, Loud Mountain (2006)
 <li>Noble Boy (2006)
