--- a/DuncanTheWonderDog/DuncanTheWonderDog.html
+++ b/DuncanTheWonderDog/DuncanTheWonderDog.html
@@ -9,7 +9,7 @@
 
 <body>
 <img src="Duncan1.jpg"> <br>
-1 issue created Adam Hines, published by AdHouse Books in 2010
+1 issue created Adam Hines, published by <a href="../AdHouse/AdHouse.html">AdHouse Books</a> in 2010
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
