--- a/index.html
+++ b/index.html
@@ -967,6 +967,13 @@
 </tr>
 
 <tr>
+<td>Albatross Funnybooks</td>
+<td>2002</td>
+<td>Publisher</td>
+<td><a href="Albatross/Albatross.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Albert Dorne</td>
 <td>1906</td>
 <td>Creator</td>
@@ -16297,6 +16304,13 @@
 <td>1976</td>
 <td>DC</td>
 <td><a href="Warlord/Warlord.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Warner Bros</td>
+<td>1923</td>
+<td>Publisher</td>
+<td><a href="WarnerBros/WarnerBros.html">Details</a></td>
 </tr>
 
 <tr>
