--- a/Zap/zap.html
+++ b/Zap/zap.html
@@ -8,7 +8,7 @@
 
 <body>
 <img src="zap00.jpg" title="Zap #0"><br>
-17 issues from 1968 - 1980 by Apex Novelty and <a href="../LastGasp/LastGasp.html">Last Gasp</a>
+17 issues from 1968 - 1980 by <a href="../ApexNovelties/ApexNovelties.html">Apex Novelties</a> and <a href="../LastGasp/LastGasp.html">Last Gasp</a>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
