--- a/index.html
+++ b/index.html
@@ -1453,6 +1453,13 @@
 </tr>
 
 <tr>
+<td>America's Best Comics</td>
+<td>1999</td>
+<td>Publisher</td>
+<td><a href="AmericasBest/AmericasBest.html">Details</a></td>
+</tr>
+
+<tr>
 <td>American</td>
 <td>1988</td>
 <td>Dark Horse</td>
@@ -1492,6 +1499,13 @@
 <td>2001</td>
 <td>William Morrow</td>
 <td><a href="AmericanGods/AmericanGods.html">Details</a></td>
+</tr>
+
+<tr>
+<td>American Greetings</td>
+<td>1906</td>
+<td>Publisher</td>
+<td><a href="AmericanGreetings/AmericanGreetings.html">Details</a></td>
 </tr>
 
 <tr>
@@ -1747,6 +1761,13 @@
 </tr>
 
 <tr>
+<td>Apex Novelties</td>
+<td>1968</td>
+<td>Publisher</td>
+<td><a href="ApexNovelties/ApexNovelties.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Apocalypse Nerd</td>
 <td>2005</td>
 <td>Dark Horse</td>
@@ -1992,6 +2013,13 @@
 </tr>
 
 <tr>
+<td>Atomeka Press</td>
+<td>1988</td>
+<td>Publisher</td>
+<td><a href="AtomekaPress/AtomekaPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Atomic Age</td>
 <td>1995</td>
 <td>Marvel</td>
@@ -2047,7 +2075,13 @@
 <td><a href="AvatarTheLastAirbender/AvatarTheLastAirbender.html">Details</a></td>
 </tr>
 
-<br>
+<tr>
+<td>Avco Embassy</td>
+<td>1942</td>
+<td>Publisher</td>
+<td><a href="AvcoEmbassy/AvcoEmbassy.html">Details</a></td>
+</tr>
+
 <tr>
 <td>Avengers</td>
 <td>1963</td>
@@ -5913,6 +5947,13 @@
 <td>1990</td>
 <td>Epic</td>
 <td><a href="ElsewherePrince/ElsewherePrince.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Embassy Pictures</td>
+<td>1942</td>
+<td>Publisher</td>
+<td><a href="AvcoEmbassy/AvcoEmbassy.html">Details</a></td>
 </tr>
 
 <tr>
