--- a/AvcoEmbassy/AvcoEmbassy.html
+++ b/AvcoEmbassy/AvcoEmbassy.html
@@ -34,7 +34,185 @@ By the 1960s, Levine had transformed Embassy into a production company. Later in
 </p><p>
 Titles
 </p><p>
-<a href="https://en.wikipedia.org/wiki/List_of_Embassy_Pictures_films">Details</a>
+<li>A Chorus Line   (1985)
+<li>A Different Story   (1978)
+<li>A House Is Not a Home   (1964)
+<li>A Man Called Adam   (1966)
+<li>A Man, a Woman, and a Bank  (1979)
+<li>A Nice Girl Like Me (1969)
+<li>A Place Called Today    (1972)
+<li>A Touch of Class   (1973)
+<li>An Eye for an Eye   (1966)
+<li>An Eye for an Eye   (1981)
+<li>Baby Love   (1969)
+<li>Billy the Kid Versus Dracula   (19660
+<li>Bittersweet Love   (1976)
+<li>Bluebeard   (1963)
+<li>Book of Numbers  (1973)
+<li>Born Again  (1978)
+<li>C.C. and Company   (1970)
+<li>Carbon Copy (1981)
+<li>Carnal Knowledge    (1971)
+<li>Champions   (1983)
+<li>City on Fire    (1979)
+<li>Contempt    (1964)
+<li>Country Music on Broadway  (1965)
+<li>Crimewave   (1986)
+<li>Cross of Iron  (1977)
+<li>Darling (1965)
+<li>David and Goliath   (1961)
+<li>Dead &amp; Buried   (1981)
+<li>Deadly Force    (1983)
+<li>Deadly Hero (1976)
+<li>Death Ship  (1980)
+<li>Delusion    (1981)
+<li>Diamonds    (1975)
+<li>Dirty Tricks    (1981)
+<li>Don't Drink the Water   (1969)
+<li>Eddie and the Cruisers  (1983)
+<li><a href="../EscapeFromNewYork/EscapeFromNewYork.html">Escape from New York</a> (1981)
+<li>False Face  (1977)
+<li>Fanny and Alexander (1983)
+<li>Farewell, My Lovely (1975)
+<li>Final Exam  (1981)
+<li>Fish Hawk   (1980)
+<li>Generation  (1969)
+<li>Get Crazy   (1983)
+<li>Git!    (1965)
+<li>Go Tell the Spartans    (1978)
+<li>Godzilla, King of the Monsters! (1956)
+<li>Goldengirl  (1979)
+<li>Harlow (1965)
+<li>Hercules   (1959)
+<li>Hercules Unchained (1960)
+<li>Hog Wild  (1980)
+<li>Homebodies (1974)
+<li>Hopscotch  (1980)
+<li>Hot Pants Holiday (1971)
+<li>Hurry Up, or I'll Be 30 (1973)
+<li>Hysterical (1982)
+<li>Interval   (1973)
+<li>J.C.  (1972)
+<li>Jack Frost (1966)
+<li>Jack the Ripper (1960)
+<li>Jesse James Meets Frankenstein's Daughter  (1966)
+<li>John F. Kennedy: Years of Lightning, Day of Drums  (1966)
+<li>Jory  (1973)
+<li>Long Day's Journey Into Night   (1962)
+<li>Losin' It (1983)
+<li>Lucky Luciano  (1974)
+<li>Macho Callahan (1970)
+<li>Mad Monster Party (1967)
+<li>Man Friday (1976)
+<li>Mister Quilp   (1975)
+<li>Morgan, the Pirate  (1961)
+<li>Nevada Smith   (1966)
+<li>Night Games(1980)
+<li>Night Watch (1973)
+<li>Old Boyfriends (1979)
+<li>Paradise  (1982)
+<li>Parasite   (1982)
+<li>Permission to Kill (1975)
+<li>Petersen   (1975)
+<li>Phantasm   (1979)
+<li>Picture Mommy Dead  (1966)
+<li>Pipe Dreams (1976)
+<li>Prom Night  (1980)
+<li>Promise at Dawn (1971)
+<li>Psychic Killer  (1975)
+<li>Rabbit Test (1978)
+<li>Requiem for a Gunfighter    (1965)
+<li>Rivals   (1972)
+<li>Robbery  (1967)
+<li>Russian Roulette    (1975)
+<li>Santa Claus Conquers the Martians   (1964)
+<li>Savannah Smiles  (1982)
+<li>Saving Grace    (1986)
+<li>Scanners    (1981)
+<li>Shatter (1975)
+<li>Shoot   (1976)
+<li>Sidewinder     (1977)
+<li>Soldier Blue    (1970)
+<li>Stiletto    (1969)
+<li>Stingray    (1978)
+<li>Strangers in the City   (1962)
+<li>Swamp Thing (1982)
+<li>Take This Job and Shove It  (1981)
+<li>The 10th Victim  (1965)
+<li>The Adventurers (1970)
+<li>The Baltimore Bullet    (1980)
+<li>The Bear    (1984)
+<li>The Bell Jar    (1979)
+<li>The Black Marble    (1980)
+<li>The Bounty Killer   (1965)
+<li>The Caper of the Golden Bulls   (1967)
+<li>The Carpetbaggers   (1964)
+<li>The Cassandra Crossing  (1977)
+<li>The Cat (1966)
+<li>The Challenge (1982)
+<li>The Chicken Chronicles (1977)
+<li>The Day of the Dolphin (1973)
+<li>The Daydream (1966)
+<li>The Domino Principle  (1977)
+<li>The Emerald Fores (1985)
+<li>The Empty Canvas  (1964)
+<li>The Exterminator   (1980)
+<li>The Fog   (1980)
+<li>The Four Deuces (1976)
+<li>The Goodbye People  (1986)
+<li>The Graduate    (1967)
+<li>The Great Gundown  (1977)
+<li>The Howling (1981)
+<li>The Idol    (1966)
+<li>The Lady Is a Square   (1959)
+<li>The Last Days of Sodom and Gomorrah (1963)
+<li>The Lion in Winter  (1968)
+<li>The Little Nuns  (1965)
+<li>The Man Who Had Power Over Women    (1971)
+<li>The Manitou   (1978)
+<li>The Night the Lights Went Out in Georgia    (1981)
+<li>The Nightcomers (1972)
+<li>The Onion Field (1979)
+<li>The Oscar  (1966)
+<li>The People Next Door    (1970)
+<li>The Photographer    (1974)
+<li>The Premonition    (1976)
+<li>The Producers   (1968)
+<li>The Ruling Class    (1972)
+<li>The Sailor Who Fell from Grace with the Sea     (1976)
+<li>The Second Best Secret Agent in the Whole Wide World    (1965)
+<li>The Seduction   (1982)
+<li>The Ski Bum (1971)
+<li>The Soldier (1982)
+<li>The Sporting Club   (1971)
+<li>The Steagle  (1971)
+<li>The Stoolie  (1972)
+<li>The Summertime Killer   (1973)
+<li>The Sure Thing (1985)
+<li>The Tamarind Seed   (1974)
+<li>The Terrornauts   (1967)
+<li>The Thief of Baghdad    (1961)
+<li>The Thirteen Chairs (1970)
+<li>The Wacky World of Mother Goose (1967)
+<li>The Wonders of Aladdin  (1961)
+<li>They Came from Beyond Space (1967)
+<li>This Is Spinal Tap (1984)
+<li>Thumb Tripping  (1972)
+<li>Time Bandits    (1981)
+<li>Tubby the Tuba  (1975)
+<li>Tulips  (1981)
+<li>Vice Squad  (1982)
+<li>Village of the Giants   (1965)
+<li>Voyage of the Damned    (1976)
+<li>Wacky Taxi  (1972)
+<li>Watership Down  (1978)
+<li>Way Out (1967)
+<li>Where Love Has Gone (1964)
+<li>Where the Bullets Fly  (1967)
+<li>Winter Kills    (1979)
+<li>Woman Times Seven   (1967)
+<li>Zapped! (1982)
+<li>Zulu    (1964)
 </p>
 
 </body>
