--- a/EscapeFromNewYork/EscapeFromNewYork.html
+++ b/EscapeFromNewYork/EscapeFromNewYork.html
@@ -9,7 +9,7 @@
 
 <body>
 <img src="EscapeFromNewYork.jpg"> <br>
-1981 Avco Emabssy<br>
+1981 <a href="../AvcoEmbassy/AvcoEmbassy.html">Avco Emabssy</a><br>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
