--- a/index.html
+++ b/index.html
@@ -2471,6 +2471,13 @@
 </tr>
 
 <tr>
+<td>BBC</td>
+<td>1922</td>
+<td>Publisher</td>
+<td><a href="BBC/BBC.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Beano</td>
 <td>1938</td>
 <td>DC Thompson</td>
@@ -2726,6 +2733,13 @@
 <td>2002</td>
 <td>Alternative Comics</td>
 <td><a href="Bipolar/Bipolar.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bird Studio</td>
+<td>1981</td>
+<td>Publisher</td>
+<td><a href="BirdStudio/BirdStudio.html">Details</a></td>
 </tr>
 
 <tr>
@@ -3007,6 +3021,13 @@
 <td>2001</td>
 <td>Marvel</td>
 <td><a href="Blink/Blink.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Blizzard</td>
+<td>1991</td>
+<td>Publisher</td>
+<td><a href="Blizzard/Blizzard.html">Details</a></td>
 </tr>
 
 <tr>
@@ -3433,6 +3454,13 @@
 <td>2006</td>
 <td>Vertigo</td>
 <td><a href="CantGetNo/CantGetNo.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Capcom</td>
+<td>1981</td>
+<td>Publisher</td>
+<td><a href="Capcom/Capcom.html">Details</a></td>
 </tr>
 
 <tr>
