--- a/Dune/Dune.html
+++ b/Dune/Dune.html
@@ -7,13 +7,12 @@
 </head>
 
 <body>
-<h2>Dune</h2>
 <img src="DuneNovel.jpg"> 
 <img src="DuneMovie.jpg"> 
 <img src="DuneComic.jpg"> 
 <img src="DuneTV.jpg"> <br>
 Series: Novel 1965. Movie 1984. Comic 1985. Television 2000.<br>
-Publisher: Chilton Books, Universal Pictures, Marvel Comics, Syfy.<br>
+Publisher: <a href="../ChiltonBooks/ChiltonBooks.html">Chilton Books</a>, Universal Pictures, Marvel Comics, Syfy.<br>
 <p>
 Dune is a science fiction media franchise that originated with the 1965 novel Dune by Frank Herbert. Dune is frequently cited as the best-selling science fiction novel in history.
 </p><p>
