--- a/SparkyWatts/SparkyWatts.html
+++ b/SparkyWatts/SparkyWatts.html
@@ -9,9 +9,7 @@
 
 <body>
 <img src="SparkyWatts1.jpg"> <br>
-Series: 10 issues 1942 - 1949<br>
-Created by Boody Rogers<br>
-Publisher: Columbia <br>
+10 issues from 1942 - 1949, created by Boody Rogers with <a href="../ColumbiaComics/ColumbiaComics.html">Columbia Comics</a>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
