--- a/index.html
+++ b/index.html
@@ -3646,6 +3646,13 @@
 </tr>
 
 <tr>
+<td>Casterman</td>
+<td>1780</td>
+<td>Publisher</td>
+<td><a href="Casterman/Casterman.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Cat</td>
 <td>1972</td>
 <td>Marvel</td>
@@ -3793,6 +3800,13 @@
 </tr>
 
 <tr>
+<td>Chesler</td>
+<td>1935</td>
+<td>Publisher</td>
+<td><a href="Chesler/Chesler.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Cheval Noir</td>
 <td>1989</td>
 <td>Dark Horse</td>
@@ -3846,6 +3860,13 @@
 <td>1972</td>
 <td>Archie</td>
 <td><a href="ChillingAdventuresInSorcery/ChillingAdventuresInSorcery.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Chilton Books</td>
+<td>1904</td>
+<td>Publisher</td>
+<td><a href="ChiltonBooks/ChiltonBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -4035,6 +4056,20 @@
 <td>2012</td>
 <td>Dark Horse</td>
 <td><a href="Colder/Colder.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Columbia Comics</td>
+<td>1940</td>
+<td>Publisher</td>
+<td><a href="ColumbiaComics/ColumbiaComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Columbia Pictures</td>
+<td>1924</td>
+<td>Publisher</td>
+<td><a href="ColumbiaPictures/ColumbiaPictures.html">Details</a></td>
 </tr>
 
 <tr>
