--- a/Echo/Echo.html
+++ b/Echo/Echo.html
@@ -2,20 +2,40 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Echo</title>
 </head>
 
 <body>
-Echo of Futurepast<br>
 <img src="echooffuturepast1.jpg"> <br>
-Series: 9 issues 1984-1986<br>
-Publisher: Continuity Graphics<br>
-Cover by Neal Adams<br>
+9 issues from 1984-1986 from <a href="../ContinuityComics/ContinuityComics.html">Continuity Comics</a>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="echooffuturepast1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="echooffuturepast2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="echooffuturepast3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="echooffuturepast4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="echooffuturepast5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="echooffuturepast6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="echooffuturepast7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="echooffuturepast8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="echooffuturepast9.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Continuity's attempt to do a Heavy Metal/Epic Illustrated style anthology comic.
 </p><p>
-Issue #1 Bucky O'Hare (script by Larry Hama, art by Michael Golden), Tippie Toe Jones (script by Lynley Farley, art by Louis Mitchell with Neal Adams), Frankenstein (script and art by Neal Adams), Virus (script and art by Jean Teule), and Mudwogs (script and art by Arthur Suydam).
+Issue #1 Bucky O'Hare (script by Larry Hama, cover by Neal Adams, art by Michael Golden), Tippie Toe Jones (script by Lynley Farley, art by Louis Mitchell with Neal Adams), Frankenstein (script and art by Neal Adams), Virus (script and art by Jean Teule), and Mudwogs (script and art by Arthur Suydam).
 </p>
 <ul>
 <li><a href="Echo2.html">Echo #2</a></li>
