--- a/WeirdTerror/WeirdTerror.html
+++ b/WeirdTerror/WeirdTerror.html
@@ -9,7 +9,7 @@
 
 <body>
 <img src="WeirdTerror01.jpg" title="cover by Don Heck"> <br>
-13 issues 1952-1954 by Comic Media
+13 issues 1952-1954 by <a href="../ComicMedia/ComicMedia.html">Comic Media</a>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
