--- a/index.html
+++ b/index.html
@@ -4129,6 +4129,13 @@
 </tr>
 
 <tr>
+<td>Comic Media</td>
+<td>1952</td>
+<td>Publisher</td>
+<td><a href="ComicMedia/ComicMedia.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Comics' Greatest World: Barb Wire</td>
 <td>1993</td>
 <td>Dark Horse</td>
@@ -4266,6 +4273,13 @@
 <td>1999</td>
 <td>Marvel</td>
 <td><a href="ContestOfChampionsII/ContestOfChampionsII.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Continuity Comics</td>
+<td>1984</td>
+<td>Publisher</td>
+<td><a href="ContinuityComics/ContinuityComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -5826,7 +5840,7 @@
 <tr>
 <td>Echo of Future Past</td>
 <td>1984</td>
-<td>Continuity Graphics</td>
+<td>Continuity Comics</td>
 <td><a href="Echo/Echo.html">Details</a></td>
 </tr>
 
