--- a/index.html
+++ b/index.html
@@ -4640,6 +4640,20 @@
 </tr>
 
 <tr>
+<td>Curtis Magazines</td>
+<td>1971</td>
+<td>Publisher</td>
+<td><a href="CurtisMagazines/CurtisMagazines.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Curtis Publishing</td>
+<td>1891</td>
+<td>Publisher</td>
+<td><a href="CurtisPublishing/CurtisPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Cyberspace 3000</td>
 <td>1993</td>
 <td>Marvel</td>
@@ -11268,6 +11282,13 @@
 </tr>
 
 <tr>
+<td>Monster Madness</td>
+<td>1971</td>
+<td>Marvel</td>
+<td><a href="MonsterMadness/MonsterMadness.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Monster Menace</td>
 <td>1993</td>
 <td>Marvel</td>
@@ -12633,7 +12654,7 @@
 </tr>
 
 <tr>
-<td>Planet of Apes</td>
+<td>Planet of the Apes</td>
 <td>1963</td>
 <td>Fox</td>
 <td><a href="PlanetOfTheApes/PlanetOfTheApes.html">Details</a></td>
