--- a/index.html
+++ b/index.html
@@ -2480,7 +2480,7 @@
 <tr>
 <td>Beano</td>
 <td>1938</td>
-<td>DC Thompson</td>
+<td>DC Thomson</td>
 <td><a href="Beano/Beano.html">Details</a></td>
 </tr>
 
@@ -4675,6 +4675,13 @@
 </tr>
 
 <tr>
+<td>D.S. Publishing</td>
+<td>1947</td>
+<td>Publisher</td>
+<td><a href="DSPublishing/DSPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Daily Bugle</td>
 <td>1996</td>
 <td>Marvel</td>
@@ -5011,6 +5018,13 @@
 </tr>
 
 <tr>
+<td>David McKay</td>
+<td>1882</td>
+<td>Publisher</td>
+<td><a href="DavidMcKay/DavidMcKay.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Day of the Defenders</td>
 <td>2001</td>
 <td>Marvel</td>
@@ -5043,6 +5057,13 @@
 <td>1934</td>
 <td>Publisher</td>
 <td><a href="DCComics/DCComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>DC Thomson</td>
+<td>1903</td>
+<td>Publisher</td>
+<td><a href="DCThomson/DCThomson.html">Details</a></td>
 </tr>
 
 <tr>
@@ -5730,6 +5751,13 @@
 <td>1981</td>
 <td>Paramount</td>
 <td><a href="Dragonslayer/Dragonslayer.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Drawn &amp; Quarterly</td>
+<td>2015</td>
+<td>Publisher</td>
+<td><a href="DrawnQuarterly/DrawnQuarterly.html">Details</a></td>
 </tr>
 
 <tr>
