--- a/DrawnQuarterly/DrawnQuarterly.html
+++ b/DrawnQuarterly/DrawnQuarterly.html
@@ -40,7 +40,7 @@ It is currently the most successful and prominent comics publisher in Canada, pu
 Titles
 </p><p>
 <li><a href="DrawnQuarterly11.jpg">32 Stories</a> (1994)
-<li>365 Days: A Diary (2002)
+<li><a href="DrawnQuarterly12.jpg">365 Days</a> (2002)
 <li>5 is the Perfect Number (2003)
 <li>A Bubble (2018)
 <li>A Drifting Life (2009)
@@ -287,7 +287,7 @@ Titles
 <li>Shortcomings  (2007) 
 <li>Showa: A History of Japan  (2013) 
 <li>Single Match  (2010)  
-<li>Skibber Bee•Bye  (2006)
+<li>Skibber Bee Bye  (2006)
 <li>Skitzy: The Story of Floyd W. Skitafroid    (2008)
 <li>Sleepwalk and Other Stories (1997)
 <li>Sleepwalk and Other Stories (1998)
@@ -304,7 +304,7 @@ Titles
 <li>Stroppy  (2015)
 <li>Summer Blonde    (2002)
 <li>Summer of Love   (2001)
-<li>SuperMutant Magic Academy    (2015)
+<li><a href="DrawnQuarterly5.jpg">SuperMutant Magic Academy</a> (2015)
 <li>Surviving Saskatoon (2000) 
 <li>Susceptible  (2013) 
 <li>Syllabus: Notes from an Accidental Professor     (2014) 
