--- a/CentaurPublications/CentaurPublications.html
+++ b/CentaurPublications/CentaurPublications.html
@@ -68,7 +68,8 @@ Titles
 <li><a href="../AmazingMan/AmazingMan.html">Amazing Man Comics</a>
 <li><a href="../AmazingMysteryFunnies/AmazingMysteryFunnies.html">Amazing Mystery Funnies</a> 
 <li><a href="Centaur3.jpg">Arrow</a> 
-<li><a href="Centaur6.jpg">C-M-O Comics</a> 
+<li><a href="Centaur6.jpg">C-M-O Comics</a>
+<li>Cheers (1942) 
 <li><a href="Centaur8.jpg">Comic Pages</a> 
 <li><a href="Centaur11.jpg">Comics Magazine</a> 
 <li><a href="Centaur12.jpg">Cowboy Comics</a> 
@@ -77,8 +78,14 @@ Titles
 <li><a href="Centaur17.jpg">Fantoman</a> 
 <li><a href="../FunnyPages/FunnyPages.html">Funny Pages</a> (1936) 
 <li><a href="../FunnyPictureStories/FunnyPictureStories.html">Funny Picture Stories</a> 
+<li>Jeeps! (1942)
 <li><a href="Centaur20.jpg">Keen Detective Funnies</a> 
+<li>Keep 'Em Laughing
+<li>Khaki Komics
+<li>Khaki Wacky
+<li>Liberty Guards Comics
 <li><a href="Centaur21.jpg">Liberty Scouts Comics</a> 
+<li>Little Giant Comics
 <li><a href="Centaur22.jpg">Man of War Comics</a> 
 <li><a href="Centaur23.jpg">Masked Marvel</a>
 <li>Star Comics 
@@ -89,6 +96,10 @@ Titles
 <li>Uncle Joe's Funnies 
 <li>Western Picture Stories 
 <li>Wham Comics 
+<li>What's Cookin'! (1942)
+<li>World Famous Heroes Magazine (1941)
+<li>Yoo Hoo! (1942)
+
 </p>
 
 </body>
