--- a/ECComics/ECComics.html
+++ b/ECComics/ECComics.html
@@ -19,57 +19,58 @@ In 1954–55, censorship pressures prompted it to concentrate on the humor magaz
 </p><p>
 <b>Titles</b>
 </p><p>
-<li>Aces High	March/April 1955 to Nov/Dec 1955	5 issues 
-<li>Animal Fables	1946–1947	#1-7
-<li>Animated Comics (1947)	N/A	#1
-<li>Blackstone the Magician Detective Fights Crime	(1947–1948)	#4
-<li>Confessions Illustrated	February 1956 – July 1956	3 issues 
-<li>Crime Illustrated	December 1955 – June 1956	3 issues 
-<li>Crime Patrol	1948–1950	#1-16
-<li>Crime SuspenStories	October/November 1950 to February/March 1955	27 issues 
-<li>Dandy Comics	1947–1948	#1-7
-<li>Extra!	March/April 1955 to Nov/Dec 1955	5 issues 
-<li>Fat and Slat	1947–1948	#1-4
-<li>Frontline Combat	July/August, 1951 to January 1954	15 issues 
-<li>Gunfighter	1948–1950	
-<li>Happy Houlihans	1947	#1-2
-<li>Impact	March/April 1955 to Nov/Dec 1955	5 issues 
-<li>Incredible Science Fiction	July/August 1955 to Jan/Feb 1956	4 issues 
-<li>Land of the Lost	1946–1948	#1-9
-<li>M.D.	April/May 1955 to Nov/Dec 1955	5 issue 
-<li>Mad	October–November 1952 to ongoing	N/A 
-<li>Mad Classics, 2005–2009 (25 issues)		
-<li>Mad Color Classics, 2000–2005 (11 issues)		
-<li>Mad Follies, 1963–1969 (7 issues)		
-<li>Mad Kids, 2005–2009 (14 issues)		
-<li>Mad Special, 1970–1973 (10 issues)		
-<li>Mad Super Special, 1973–1999 (131 issues)		
-<li>Mad XL, 2000–2005 (34 issues)		
-<li>Modern Love	1949–1950	#1-8
-<li>Moon Girl	1947–1950	#1-12
-<li>More Trash from Mad, 1958–1969 (12 issues)		
-<li>Panic	February–March 1954 to December/January 1956	12 issues 
-<li>Picture Stories from American History	1945–1947	#1-4
-<li>Picture Stories from Science	1947	#1-2
-<li>Picture Stories from the Bible (New Testament edition)	1944–1946	#1-3
-<li>Piracy	October/November 1954 to October/November 1955	7 issues 
-<li>Psychoanalysis	March/April, 1955 to September/October 1955	4 issues 
-<li>Saddle Justice	1948–1950	#3-11
-<li>Shock Illustrated	September/October 1955 – Spring 1956	3 issues 
-<li>Shock SuspenStories	February/March 1952 to December/January 1955	18 issues 
-<li>Terror Illustrated	November/December 1955 – Spring 1956	2 issues 
-<li>The Crypt of Terror/Tales from the Crypt	April/May 1950 to February/March 1955	30 issues 
-<li>The Haunt of Fear	May/June 1950 to November/December 1954	28 issues 
-<li>The Vault of Horror	April/May 1950 to December/January 1955	29 issues 
-<li>Three Dimensional E.C. Classics/Three Dimensional Tales from the Crypt of Terror	Spring 1954 to March 1954	2 issues 
-<li>Tiny Tot Comics	1946–1947	#1-10
-<li>Two-Fisted Tales	November/December 1950 to February 1955	24 issues 
-<li>Valor	March/April 1955 to Nov/Dec 1955	5 issues 
-<li>War Against Crime!	1948–1950	#1-11
-<li>Weird Fantasy	May/June 1950 to November/December 1953	22 issues 
-<li>Weird Science	May/June 1950 to November/December 1953	22 issues 
-<li>Weird Science-Fantasy	March 1954 to May/June 1955	7 issues 
-<li>Worst from Mad, 1958–1969 (12 issues)		
+<li>Aces High  (1955)
+<li>Animal Fables   (1946)
+<li>Animated Comics (1947)
+<li>Blackstone (1947)
+<li>Confessions Illustrated (1956)
+<li>Crime Illustrated  (1955)
+<li>Crime Patrol    (1948)
+<li>Crime SuspenStories (1950) 
+<li>Dandy Comics (1947)
+<li>Extra! (1955)
+<li>Fat and Slat  (1947)
+<li>Frontline Combat   (1951) 
+<li>Gunfighter  (1948)
+<li>Happy Houlihans (1947)
+<li>Impact  (1955) 
+<li>Incredible Science Fiction (1955)
+<li>Land of the Lost  (1946)
+<li>M.D.(1955)
+<li>Mad (1952)
+<li>Mad Classics (2005)
+<li>Mad Color Classics (2000)
+<li>Mad Follies (1963)
+<li>Mad Kids (2005)
+<li>Mad Special (1970)
+<li>Mad Super Special (1973)
+<li>Mad XL (2000)
+<li>Modern Love (1949)
+<li>Moon Girl   (1947)
+<li>More Trash from Mad (1958) 
+<li>Panic   February–March (1954)
+<li>Picture Stories from American History   (1945)
+<li>Picture Stories from Science  (1947)
+<li>Picture Stories from the Bible (1944)
+<li>Piracy  (1954)
+<li>Psychoanalysis  (1955)
+<li>Saddle Justice  (1948)
+<li>Shock Illustrated  (1955)
+<li>Shock SuspenStories (1952)
+<li>Terror Illustrated (1955)
+<li>The Crypt of Terror (195)
+<li>Tales from the Crypt (1950)
+<li>The Haunt of Fear  (1950)
+<li>The Vault of Horror (1950) 
+<li>Three Dimensional E.C. Classics (1954) 
+<li>Tiny Tot Comics (1946)
+<li>Two-Fisted Tales (1950) 
+<li>Valor  (1955) 
+<li>War Against Crime!  (1948)
+<li>Weird Fantasy  (1950)
+<li>Weird Science  (1950)
+<li>Weird Science-Fantasy  (1954)
+<li>Worst from Mad (1958)
 
 </p>
 </body>
